@startuml

class Entidade {
  -nome
}

class Vaga {
 
}

class Papel 

class Pessoa

class Fisica extends Pessoa {
  -cpf
}

class Juridica extends Pessoa{
  -cnpj
}

class Candidato extends Papel{
}

class ONG { 
    -nome
}

class Voluntario extends Candidato {

}

class Campanha {
    -nome
    -descricao
}


class Perfil {

}

class Habilidade {
    -descricao
}

class Interesse {
    -descricao
}

class Representante {
    
}

class Email extends Localizacao{
    -enderecoEmail
}

class Localizacao {

}

class Geografica extends Localizacao{
    -pais
    -estado
    -cidade
    -endereco
    -complemento
    -numero
}

class Recomendacao {

}

class Aprovacao {
    -data
    -status
    -motivo
}

class CertidaoCNPJ {
    -nomeArquivo
    -tipo
}

class "Termo" as Termo{
}

class CondicaoTermo{
    -texto
}

class Aceite {
 -data
}

class ItemAceite {
 -texto
}

class PedidoAfiliacao {
    -status
    -data
}

Perfil "1..*" o-- "1..*" Habilidade: contém
Perfil "1..*" o-- "1..*" Interesse: possui

Entidade "1" -- "1" Papel: possui
Entidade "1" -- "1" Pessoa: é

Fisica <-- "1" Juridica: representado

Candidato "1" -- "1" PedidoAfiliacao: solicita
Candidato "1" -- "0..*" CertidaoCNPJ: anexa
Candidato "1..*" -- "1..*" Perfil
Candidato -- "1" PedidoAfiliacao: Solicita


Entidade "1" -- "1" Perfil: possui
Entidade "1" *-- "1..*" Localizacao: possui

ONG "1" *-- "0..*" Campanha: abre
Campanha "1" -- "1..*" Vaga: contém

Vaga "1..*" -- "1..*" Perfil: possui
Vaga "1..*" -- "0..*" Voluntario: contém

Representante "1" -- "1..*" PedidoAfiliacao: avalia
Representante "1" -- "1..*" Aprovacao: solicita
Representante "1" -- "1..*" Perfil: especifica
Representante "1" -- "1..*" Recomendacao: solicita

Recomendacao "0..*" -- "0..*" ONG: apresenta

PedidoAfiliacao "1" -- "1" Aprovacao : "passa por"

Voluntario "1" -- "1" PedidoAfiliacao: "possui"


PedidoAfiliacao -- "0..1" Termo: contém

Termo "*" -- "1..*" CondicaoTermo: Possui

Termo "1" -- "1" Aceite: Gera

Aceite "1..*" -- "1..*" ItemAceite: Possui


@enduml